--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
         <link rel="stylesheet" href="./styles/style.css" />
-
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <!-- Link a Google Fonts  -->
         <link
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Playwrite+NG+Modern:wght@100..400&display=swap"
@@ -16,33 +13,33 @@
     </head>
 
     <body>
+        <!-- header  -->
         <header>
             <div class="content-logo container">
                 <div class="box-icon-logo">
                     <img class="image-logo" src="./images/icon-logo.webp" alt="" />
                     <span class="span-logo">Market</span>
                 </div>
-
                 <div class="box-icon-cart">
                     <img class="icon-cart" src="./images/cart-blanco.png" alt="" />
                     <span class="span-cart">0</span>
                 </div>
             </div>
         </header>
-
+        <!-- main  -->
         <main>
             <section>
                 <div class="content-inputs">
                     <div class="box-input-search">
                         <input id="search" type="search" placeholder="Buscar productos..." />
 
-                        <img class="icon-search" src="./images/search-b.png"  alt="search" />
+                        <img class="icon-search" src="./images/search-b.png" alt="search" />
                     </div>
                     <select>
                         <option value="" disabled selected>Todas las categoría</option>
-                        <option value="">Carnes</option>
-                        <option value="">Carnes</option>
-                        <option value="">Carnes</option>
+                        <option value="">Groceries</option>
+                        <option value="">Beauty</option>
+                        <option value="">Fourniture</option>
                     </select>
                 </div>
 
@@ -56,20 +53,13 @@
                             alt=""
                         />
                         <h3>Cat Food</h3>
-
                         <div class="card-info">
-                            <p class="text-card">
-                                <span class="text1"
-                                    >Quality fish steak, suitable for grilling, baking, or pan-searing.
-                                </span>
-                            </p>
-
+                            <p class="text-card">Quality fish steak, suitable for grilling, baking, or pan-searing.</p>
                             <div>
                                 <span class="text-rosa">Categoria</span>
                                 <button class="button-category">groceries</button>
                             </div>
                             <p class="text-price">Precio: <span class="span-price">S/ 8.99</span></p>
-
                             <button class="button-add">Agregar al carrito</button>
                         </div>
                     </div>
@@ -82,11 +72,7 @@
                         />
                         <h3>Essence Mascara Lash Princess</h3>
                         <div class="card-info">
-                            <p class="text-card">
-                                <span class="text1"
-                                    >Quality fish steak, suitable for grilling, baking, or pan-searing.
-                                </span>
-                            </p>
+                            <p class="text-card">Quality fish steak, suitable for grilling, baking, or pan-searing.</p>
                             <div>
                                 <span class="text-rosa">Categoria</span>
                                 <button class="button-category">beauty</button>
@@ -104,11 +90,7 @@
                         />
                         <h3>Annibale Colombo Sofa</h3>
                         <div class="card-info">
-                            <p class="text-card">
-                                <span class="text1"
-                                    >Quality fish steak, suitable for grilling, baking, or pan-searing.
-                                </span>
-                            </p>
+                            <p class="text-card">Quality fish steak, suitable for grilling, baking, or pan-searing.</p>
                             <div>
                                 <span class="text-rosa">Categoria</span>
                                 <button class="button-category">fourniture</button>
@@ -120,7 +102,7 @@
                 </div>
             </section>
         </main>
-
+        <!-- footer  -->
         <footer>
             <p>Todos los dereschos reservados</p>
         </footer>
