feat: add Vite settings and organize folder structure

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Playwrite+NG+Modern:wght@100..400&display=swap"
             rel="stylesheet"
         />
+        <script src="./main.js" defer></script>
     </head>
 
     <body>
