feat: add asynchronous fetch function to get products

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Playwrite+NG+Modern:wght@100..400&display=swap"
             rel="stylesheet"
         />
-        <script src="./main.js" defer></script>
+        <script src="./js/api.js" defer type="module"></script>
     </head>
 
     <body>
@@ -32,7 +32,7 @@
             <section>
                 <div class="content-inputs">
                     <div class="box-input-search">
-                        <input id="search" type="search" placeholder="Buscar productos..." />
+                        <input id="search" type="search" placeholder="¿Qué estás buscando?" />
                         <img class="icon-search" src="./images/search-b.png" alt="Icono de buscador" />
                     </div>
                     <select>
@@ -43,78 +43,24 @@
                     </select>
                 </div>
 
-                <h2>Nuestros Productos</h2>
-
-                <div class="content-cards container">
-                    <!-- Card 1  -->
-                    <div class="card">
-                        <img
-                            class="card-img"
-                            src="https://cdn.dummyjson.com/products/images/groceries/Cat%20Food/1.png"
-                            alt="Imagen de alimento para gatos"
-                        />
-                        <h3>Cat Food</h3>
-                        <div class="card-info">
-                            <p class="text-card">Quality fish steak, suitable for grilling, baking, or pan-searing.</p>
-                            <div>
-                                <span class="text-rosa">Categoría</span>
-                                <a class="button-category" href="#">groceries</a>
-                            </div>
-                            <p class="text-price">Precio: <span class="span-price">S/ 8.99</span></p>
-                            <button class="button-add">Agregar al carrito</button>
-                        </div>
-                    </div>
-                    <!-- Card 2  -->
-                    <div class="card">
-                        <img
-                            class="card-img"
-                            src="https://cdn.dummyjson.com/products/images/beauty/Eyeshadow%20Palette%20with%20Mirror/1.png"
-                            alt="Imagen mascara maquilladora"
-                        />
-                        <h3>Essence Mascara Lash Princess</h3>
-                        <div class="card-info">
-                            <p class="text-card">Quality fish steak, suitable for grilling, baking, or pan-searing.</p>
-                            <div>
-                                <span class="text-rosa">Categoría</span>
-                                <a class="button-category" href="#">beauty</a>
-                            </div>
-                            <p class="text-price">Precio: <span class="span-price">S/ 19.99</span></p>
-                            <button class="button-add">Agregar al carrito</button>
-                        </div>
-                    </div>
-                    <!-- Card 3  -->
-                    <div class="card">
-                        <img
-                            class="card-img"
-                            src="https://cdn.dummyjson.com/products/images/furniture/Annibale%20Colombo%20Sofa/1.png"
-                            alt="Imagen cama blanca"
-                        />
-                        <h3>Annibale Colombo Sofa</h3>
-                        <div class="card-info">
-                            <p class="text-card">Quality fish steak, suitable for grilling, baking, or pan-searing.</p>
-                            <div>
-                                <span class="text-rosa">Categoria</span>
-                                <a class="button-category" href="#">fourniture</a>
-                            </div>
-                            <p class="text-price">Precio: <span class="span-price">S/ 2499.99</span></p>
-                            <button class="button-add">Agregar al carrito</button>
-                        </div>
-                    </div>
+                <div>
+                    <h2 class="container">Nuestros Productos</h2>
+                    <div class="content-cards container"></div>
                 </div>
             </section>
         </main>
         <!-- footer  -->
         <footer>
             <div class="content-footer container">
-                <h4 class="text-footer">Síguenos en redes:</h4>
+                <p class="text-footer">Síguenos en redes:</p>
                 <div>
                     <img class="icon-social" src="./images/icon-whatsapp.png" alt="Icono de WhatsApp" />
                     <img class="icon-social" src="./images/icono-tiktok.png" alt="Icono de Tiktok" />
                     <img class="icon-social" src="./images/icon-instagram.png" alt="Icono de Instagram" />
                     <img class="icon-social" src="./images/icon-facebook.png" alt="Icono de Instagram" />
                 </div>
-                <p class="text-copyrigth">© 2024 Market. Todos los dereschos reservados</p>
             </div>
+            <p class="text-copyrigth">© 2024 Market. Todos los derechos reservados</p>
         </footer>
     </body>
 </html>
