feat: fetch products by category and implement category-specific mapper

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Playwrite+NG+Modern:wght@100..400&display=swap"
             rel="stylesheet"
         />
-        <script src="./js/api.js" defer type="module"></script>
+        <script src="./main.js" defer type="module"></script>
     </head>
 
     <body>
@@ -35,11 +35,11 @@
                         <input id="search" type="search" placeholder="¿Qué estás buscando?" />
                         <img class="icon-search" src="./images/search-b.png" alt="Icono de buscador" />
                     </div>
-                    <select>
-                        <option value="" disabled selected>Todas las categoría</option>
+                    <select id="category-select">
+                        <!-- <option value="" disabled selected>Todas las categoría</option>
                         <option value="">Groceries</option>
                         <option value="">Beauty</option>
-                        <option value="">Fourniture</option>
+                        <option value="">Fourniture</option> -->
                     </select>
                 </div>
 
