feat adding functionality to filter by categories in the select

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Market - Tienda Online</title>
-        <link rel="stylesheet" href="./styles/style.css" />
+        <link rel="stylesheet" href="./src/styles/style.css" />
         <!-- Link a Google Fonts  -->
         <link
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Playwrite+NG+Modern:wght@100..400&display=swap"
             rel="stylesheet"
         />
-        <script src="./main.js" defer type="module"></script>
+        <script src="./src/main.js" defer type="module"></script>
     </head>
 
     <body>
@@ -18,11 +18,11 @@
         <header>
             <div class="content-logo container">
                 <div class="box-icon-logo">
-                    <img class="image-logo" src="./images/icon-logo.webp" alt="Logo de Market" />
+                    <img class="image-logo" src="./src/assets/icon-logo.webp" alt="Logo de Market" />
                     <span class="span-logo">Market</span>
                 </div>
                 <div class="box-icon-cart">
-                    <img class="icon-cart" src="./images/cart-blanco.png" alt="Icono Carrito de compras" />
+                    <img class="icon-cart" src="./src/assets/cart-header.png" alt="Icono Carrito de compras" />
                     <span class="span-cart">0</span>
                 </div>
             </div>
@@ -33,13 +33,9 @@
                 <div class="content-inputs">
                     <div class="box-input-search">
                         <input id="search" type="search" placeholder="¿Qué estás buscando?" />
-                        <img class="icon-search" src="./images/search-b.png" alt="Icono de buscador" />
+                        <img class="icon-search" src="./src/assets/search-b.png" alt="Icono de buscador" />
                     </div>
                     <select id="category-select">
-                        <!-- <option value="" disabled selected>Todas las categoría</option>
-                        <option value="">Groceries</option>
-                        <option value="">Beauty</option>
-                        <option value="">Fourniture</option> -->
                     </select>
                 </div>
 
@@ -54,10 +50,10 @@
             <div class="content-footer container">
                 <p class="text-footer">Síguenos en redes:</p>
                 <div>
-                    <img class="icon-social" src="./images/icon-whatsapp.png" alt="Icono de WhatsApp" />
-                    <img class="icon-social" src="./images/icono-tiktok.png" alt="Icono de Tiktok" />
-                    <img class="icon-social" src="./images/icon-instagram.png" alt="Icono de Instagram" />
-                    <img class="icon-social" src="./images/icon-facebook.png" alt="Icono de Instagram" />
+                    <img class="icon-social" src="./src/assets/icon-whatsapp.png" alt="Icono de WhatsApp" />
+                    <img class="icon-social" src="./src/assets/icono-tiktok.png" alt="Icono de Tiktok" />
+                    <img class="icon-social" src="./src/assets/icon-instagram.png" alt="Icono de Instagram" />
+                    <img class="icon-social" src="./src/assets/icon-facebook.png" alt="Icono de facebook" />
                 </div>
             </div>
             <p class="text-copyrigth">© 2024 Market. Todos los derechos reservados</p>
