feat: add product filtering functionality to search input

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 
                 <div>
                     <h2 class="container">Nuestros Productos</h2>
-                    <div class="content-cards container"></div>
+                    <div class="content-cards container">
+                        <!-- Creando desde js  -->
+                    </div>
                 </div>
             </section>
         </main>
