feat: add project readme

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Playwrite+NG+Modern:wght@100..400&display=swap"
             rel="stylesheet"
         />
-        <script src="./src/main.js" defer type="module"></script>
+        <script src="./src/app.js" defer type="module"></script>
     </head>
 
     <body>
@@ -23,7 +23,7 @@
                 </div>
                 <div class="box-icon-cart">
                     <img class="icon-cart" src="./src/assets/cart-header.png" alt="Icono Carrito de compras" />
-                    <span class="span-cart">0</span>
+                    <span id="cart-counter" class="span-cart">0</span>
                 </div>
             </div>
         </header>
@@ -32,7 +32,7 @@
             <section>
                 <div class="content-inputs">
                     <div class="box-input-search">
-                        <input id="search" type="search" placeholder="¿Qué estás buscando?" />
+                        <input id="search" type="search" placeholder="Buscar productos..." />
                         <img class="icon-search" src="./src/assets/search-b.png" alt="Icono de buscador" />
                     </div>
                     <select id="category-select">
