feat: migrate project to TypeScript and modularize folders

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Playwrite+NG+Modern:wght@100..400&display=swap"
             rel="stylesheet"
         />
-        <script src="./src/app.js" defer type="module"></script>
+        <script src="./src/app.ts" defer type="module"></script>
     </head>
 
     <body>
